[package]
name = "asset-server"
version = "0.1.0"
authors = ["Matej <dobrakmato@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
bf = { path = "../bf" }
env_logger = "0.8.3"
futures = "0.3.13"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
notify = "4.0.15"
num_cpus = "1.13.0"
once_cell = "1.7.2"
serde = "1.0.124"
serde_json = "1.0.64"
tempfile = "3.2.0"
tokio = { version = "1.3.0", features = ["full"] }
uuid = { version = "0.8.2", features = ['v5'] }
walkdir = "2.3.1"
