[package]
name = "asset-server"
version = "0.1.0"
authors = ["Matej <dobrakmato@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
bf = { path = "../bf" }
env_logger = "0.8.4"
futures = "0.3.15"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
notify = "4.0.15"
num_cpus = "1.13.0"
once_cell = "1.8.0"
open = "1.7.0"
serde = "1.0.126"
serde_json = "1.0.64"
tempfile = "3.2.0"
tokio = { version = "0.2.6", features = ["full"] }
uuid = { version = "0.8.2", features = ['v5'] }
walkdir = "2.3.1"
