[package]
name = "bf"
version = "0.1.0"
authors = ["Matej <dobrakmato@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_bytes = "0.11"
lz4 = "1.23.1"
uuid = { version = "0.8.1", features = ["serde"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "0.9.1"