[package]
name = "bf"
version = "0.1.0"
authors = ["Matej <dobrakmato@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_bytes = "0.11.5"
lz4 = "1.23.2"
uuid = { version = "0.8.2", features = ["serde"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"