[package]
name = "renderer"
version = "0.1.0"
authors = ["Matej <dobrakmato@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.1"
once_cell = "1.4.0"
crossbeam = "0.8.0"
smallvec = "1.4.0"
cgmath = { version = "0.17.0" }
cstr = "0.2.5"
safe-transmute = "0.11.0-rc.2"
bf = { path = "../bf" }
core = { path = "../core" }
log = "0.4.8"
simple_logger = "1.6.0"
vulkano = "0.19.0"
vulkano-shaders = "0.19.0"
vulkano-win = "0.19.0"
winit = "0.22.2"