[package]
name = "renderer"
version = "0.1.0"
authors = ["Matej <dobrakmato@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
once_cell = "1.7.2"
crossbeam = "0.8.0"
smallvec = "1.6.1"
cgmath = { version = "0.18.0" }
cstr = "0.2.8"
safe-transmute = "0.11.1"
bf = { path = "../bf" }
core = { path = "../core" }
log = "0.4.14"
simple_logger = "1.11.0"
vulkano = "0.19.0"
vulkano-shaders = "0.21.0"
vulkano-win = "0.19.0"
winit = "0.22.2"