[package]
name = "renderer"
version = "0.1.0"
authors = ["Matej <dobrakmato@gmail.com>"]
edition = "2018"

[dependencies]
bf = { path = "../bf" }
cgmath = { version = "0.18.0" }
core = { path = "../core" }
crossbeam = "0.8.1"
cstr = "0.2.8"
downcast-rs = "1.2.0"
log = "0.4.14"
once_cell = "1.8.0"
parking_lot = "0.11.1"
rand = "0.8.4"
safe-transmute = "0.11.2"
simple_logger = "1.11.0"
smallvec = "1.6.1"
vulkano = "0.25.0"
vulkano-shaders = "0.25.0"
vulkano-win = "0.25.0"
winit = "0.25.0"